ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dollhaven-backend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:783764593567:certificate/1f6f7d02-ac15-40cc-921e-d9d0ae58ced7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: api.doll-haven.com
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: dollhaven-backend
                  port:
                    number: 8000
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dollhaven-backend
              port:
                number: 8000
